--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img class="img-circle" src="img/timeline/Logo.jpg"/> {{ site.title }}
+                    <img class="img-circle" src="img/timeline/Mascot.jpg"/> {{ site.title }}
                 </a>
             </div>
 
