--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ site.description }}" />
     <meta name="author" content="{{ site.author }}" />
     <meta name="keywords" content="{{ site.keywords }}" />
-    <link rel="icon" href="img/timeline/Logo1.png" type="image/icon type">
+    <link rel="icon" href="img/timeline/mascot.png" type="image/icon type">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <title>{{ site.title }} {% if page.title %} | {{ page.title }}{% endif %}</title>
