--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #fec503;
+  color: #C8FD2B;
   /* color: #11505d; */
 }
 
@@ -412,7 +412,7 @@ ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
   color: #222;
-  background-color: #fec503;
+  background-color: #C8FD2B;
 }
 
 footer {
@@ -451,5 +451,5 @@ body {
   background: #0d0d0d;
   box-shadow: rgba(255, 143, 0, 0.25) 0px 54px 55px, rgba(253, 130, 0, 0.12) 0px -12px 30px, rgba(255, 179, 0, 0.12) 0px 4px 6px, rgba(255, 167, 0, 0.17) 0px 12px 13px, rgba(255, 167, 0, 0.09) 0px -3px 5px;
   padding: 4% 1%;
-  margin: 5%;
+  margin-bottom: 5%;
 }
