--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -44,7 +44,7 @@ p {
 }
 
 a {
-  color: #c8fd2b;
+  color: #FFD700;
   /* color: #219ab3; */
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -451,5 +451,5 @@ body {
   background: #0d0d0d;
   box-shadow: rgba(255, 143, 0, 0.25) 0px 54px 55px, rgba(253, 130, 0, 0.12) 0px -12px 30px, rgba(255, 179, 0, 0.12) 0px 4px 6px, rgba(255, 167, 0, 0.17) 0px 12px 13px, rgba(255, 167, 0, 0.09) 0px -3px 5px;
   padding: 4% 1%;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
 }
