--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: Lora, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #fff;
   background-color: #000;
 }
@@ -150,6 +150,17 @@ a:focus {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom right, #000000, #000000);
+    opacity: .7;
+  }
 }
 
 .intro .intro-body {
