--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -474,9 +474,13 @@ body {
   position: relative;
   width: 75%;
   height: 100%;
-  background: linear-gradient(to bottom, #3a404d, #181c26);
+  background: #0d0d0d;
   border-radius: 10px;
-  box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
+  box-shadow: rgba(255, 143, 0, 0.25) 0px 15px 55px,
+    rgba(253, 130, 0, 0.12) 0px -12px 30px,
+    rgba(255, 179, 0, 0.12) 0px 4px 6px,
+    rgba(255, 167, 0, 0.17) 0px 12px 13px,
+    rgba(255, 167, 0, 0.09) 0px -3px 5px;
   margin: 0 auto;
 
   h1 {
@@ -487,6 +491,7 @@ body {
 
   ol {
     counter-reset: leaderboard;
+    margin-left: -15px;
 
     li.token {
       position: relative;
@@ -678,4 +683,9 @@ body {
     }
 
   }
+}
+
+ol li.token::marker {
+  display: none !important;
+  color: #0d0d0d;
 }
