--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #C8FD2B;
+  color: #FFE45A;
   /* color: #11505d; */
 }
 
@@ -68,6 +68,10 @@ a:focus {
   text-transform: uppercase;
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #000;
+}
+
+.navbar-header:hover {
+  scale: 1.1;
 }
 
 .navbar-brand>img {
@@ -420,7 +424,7 @@ ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
   color: #222;
-  background-color: #C8FD2B;
+  background-color: #FFE45A;
 }
 
 footer {
@@ -490,15 +494,17 @@ body {
     li.token {
       position: relative;
       z-index: 1;
-      font-size: 14px;
+      font-size: 20px;
+      font-weight: 700;
       counter-increment: leaderboard;
       padding: 18px 10px 18px 50px;
       cursor: pointer;
+      color: #000000;
       backface-visibility: hidden;
       transform: translateZ(0) scale(1.0, 1.0);
 
 
-      &::before {
+      /*&::before {
         content: counter(leaderboard);
         position: absolute;
         z-index: 2;
@@ -511,9 +517,11 @@ body {
         background: #fff;
         border-radius: 20px;
         text-align: center;
-      }
+      }*/
 
       mark {
+        font-weight: 700;
+        font-size: 20px;
         position: absolute;
         z-index: 2;
         top: 0;
@@ -523,7 +531,8 @@ body {
         padding: 18px 10px 18px 50px;
         margin: 0;
         background: none;
-        color: #fff;
+        color: #000000;
+        text-align: left;
 
         &::before,
         &::after {
@@ -682,4 +691,8 @@ body {
 ol li.token::marker {
   display: none !important;
   color: #0d0d0d;
+}
+
+.banner-text {
+  font-size: 30px;
 }
