--- a/css/timeline.css
+++ b/css/timeline.css
@@ -15,23 +15,23 @@
   background-color: #f1f1f1;
 }
 
-.timeline > li {
+.timeline>li {
   position: relative;
   margin-bottom: 50px;
   min-height: 50px;
 }
 
-.timeline > li:before,
-.timeline > li:after {
+.timeline>li:before,
+.timeline>li:after {
   content: " ";
   display: table;
 }
 
-.timeline > li:after {
+.timeline>li:after {
   clear: both;
 }
 
-.timeline > li .timeline-panel {
+.timeline>li .timeline-panel {
   float: right;
   position: relative;
   width: 100%;
@@ -39,21 +39,21 @@
   text-align: left;
 }
 
-.timeline > li .timeline-panel:before {
+.timeline>li .timeline-panel:before {
   right: auto;
   left: -15px;
   border-right-width: 15px;
   border-left-width: 0;
 }
 
-.timeline > li .timeline-panel:after {
+.timeline>li .timeline-panel:after {
   right: auto;
   left: -14px;
   border-right-width: 14px;
   border-left-width: 0;
 }
 
-.timeline > li .timeline-image {
+.timeline>li .timeline-image {
   z-index: 100;
   position: absolute;
   left: 0;
@@ -67,47 +67,47 @@
   background-color: #f1f1f1;
 }
 
-.timeline > li .timeline-image h4 {
+.timeline>li .timeline-image h4 {
   margin-top: 12px;
   font-size: 10px;
   line-height: 14px;
 }
 
-.timeline > li.timeline-inverted > .timeline-panel {
+.timeline>li.timeline-inverted>.timeline-panel {
   float: right;
   padding: 0 20px 0px 90px;
   text-align: left;
 }
 
-.timeline > li.timeline-inverted > .timeline-panel:before {
+.timeline>li.timeline-inverted>.timeline-panel:before {
   right: auto;
   left: -15px;
   border-right-width: 15px;
   border-left-width: 0;
 }
 
-.timeline > li.timeline-inverted > .timeline-panel:after {
+.timeline>li.timeline-inverted>.timeline-panel:after {
   right: auto;
   left: -14px;
   border-right-width: 14px;
   border-left-width: 0;
 }
 
-.timeline > li:last-child {
+.timeline>li:last-child {
   margin-bottom: 0;
 }
 
 .timeline .timeline-heading h4 {
   margin-top: 0;
-  color:  #C8FD2B;
+  color: #FFD700;
 }
 
 .timeline .timeline-heading h4.subheading {
   text-transform: none;
 }
 
-.timeline .timeline-body > p,
-.timeline .timeline-body > ul {
+.timeline .timeline-body>p,
+.timeline .timeline-body>ul {
   margin-bottom: 0;
 }
 
@@ -116,32 +116,32 @@
     left: 50%;
   }
 
-  .timeline > li {
+  .timeline>li {
     margin-bottom: 100px;
     min-height: 100px;
   }
 
-  .timeline > li .timeline-panel {
+  .timeline>li .timeline-panel {
     float: left;
     width: 41%;
     padding: 0 20px 20px 30px;
     text-align: right;
   }
 
-  .timeline > li .timeline-image {
+  .timeline>li .timeline-image {
     left: 50%;
     width: 100px;
     height: 100px;
     margin-left: -50px;
   }
 
-  .timeline > li .timeline-image h4 {
+  .timeline>li .timeline-image h4 {
     margin-top: 16px;
     font-size: 13px;
     line-height: 18px;
   }
 
-  .timeline > li.timeline-inverted > .timeline-panel {
+  .timeline>li.timeline-inverted>.timeline-panel {
     float: right;
     padding: 0 30px 20px 20px;
     text-align: left;
@@ -149,51 +149,51 @@
 }
 
 @media (min-width: 992px) {
-  .timeline > li {
+  .timeline>li {
     min-height: 150px;
   }
 
-  .timeline > li .timeline-panel {
+  .timeline>li .timeline-panel {
     padding: 0 20px 20px;
   }
 
-  .timeline > li .timeline-image {
+  .timeline>li .timeline-image {
     width: 150px;
     height: 150px;
     margin-left: -75px;
   }
 
-  .timeline > li .timeline-image h4 {
+  .timeline>li .timeline-image h4 {
     margin-top: 30px;
     font-size: 18px;
     line-height: 26px;
   }
 
-  .timeline > li.timeline-inverted > .timeline-panel {
+  .timeline>li.timeline-inverted>.timeline-panel {
     padding: 0 20px 20px;
   }
 }
 
 @media (min-width: 1200px) {
-  .timeline > li {
+  .timeline>li {
     min-height: 170px;
   }
 
-  .timeline > li .timeline-panel {
+  .timeline>li .timeline-panel {
     padding: 0 30px 20px 30px;
   }
 
-  .timeline > li .timeline-image {
+  .timeline>li .timeline-image {
     width: 170px;
     height: 170px;
     margin-left: -85px;
   }
 
-  .timeline > li .timeline-image h4 {
+  .timeline>li .timeline-image h4 {
     margin-top: 40px;
   }
 
-  .timeline > li.timeline-inverted > .timeline-panel {
+  .timeline>li.timeline-inverted>.timeline-panel {
     padding: 0 30px 20px 30px;
   }
 }
