--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -521,7 +521,7 @@ body {
 
       mark {
         font-weight: 700;
-        font-size: 20px;
+        font-size: 2rem;
         position: absolute;
         z-index: 2;
         top: 0;
@@ -533,6 +533,7 @@ body {
         background: none;
         color: #000000;
         text-align: left;
+        left: -25px;
 
         &::before,
         &::after {
@@ -560,6 +561,7 @@ body {
         z-index: 2;
         display: block;
         text-align: right;
+        font-size: 2rem;
       }
 
       &::after {
@@ -597,7 +599,7 @@ body {
 
           &::before,
           &::after {
-            border-top: 6px solid #ba4741;
+            border-top: 6px solid #FFE03A;
             bottom: -7px;
           }
         }
@@ -615,7 +617,7 @@ body {
 
           &::before,
           &::after {
-            border-top: 2px solid #b0433f;
+            border-top: 2px solid #F9D71F;
             bottom: -3px;
           }
         }
@@ -636,7 +638,7 @@ body {
             top: -7px;
             bottom: auto;
             border-top: none;
-            border-bottom: 6px solid #a63d3d;
+            border-bottom: 6px solid #F9D71F;
             ;
           }
         }
@@ -659,7 +661,7 @@ body {
             top: -9px;
             bottom: auto;
             border-top: none;
-            border-bottom: 8px solid #993639;
+            border-bottom: 8px solid #e8c500;
           }
         }
       }
@@ -695,4 +697,13 @@ ol li.token::marker {
 
 .banner-text {
   font-size: 30px;
+}
+
+.about-text {
+  text-align: left;
+}
+
+.about-text-end,
+.about-text {
+  font-size: 1.5rem;
 }
