--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
         <div class="container text-center">
             <p>Copyright &copy; {{ site.author }} {{ site.time | date: "%Y" }}</p>
         </div>
+<div class="disclaimer"> $CURRENCY a playful meme coin on the Solana blockchain. This is NOT financial advice. The coin is crafted for entertainment and educational purposes exclusively. The founders bear no responsibility for any losses or damages. The market is known for its ups and downs; invest wisely and at your own risk. No promises of guaranteed profit or value retention. Conduct thorough research before diving in. Your purchase signifies your acknowledgment of the associated risks. Founders hold no obligation to regularly update information. Legal regulations differ; adhere to local laws. This disclaimer is subject to spontaneous changes. Enjoy the ride, but be aware of the uncertainties!</div>
+
     </footer>
 
 
